2011-01-14  Murray Cumming  <murrayc@murrayc.com>

	Regenerated function defs.

	* gdk/src/gdk_methods.defs:
	* gtk/src/gtk_methods.defs: Regenerated with h2defs.py.
	* gtk/src/aboutdialog.hg: Use the changed conversion from gtkmm 3.0 which 
	avoids the need to edit the generated .defs file.
	
2011-01-11  Kjell Ahlstedt  <kjell.ahlstedt@bredband.net>

  Widget::set_window(): Increase the ref count of the Gdk::Window.

  * gdk/src/widget.[hg|ccg]: set_window() increases the ref count of the
  Gdk::Window, since gtk_widget_set_window() does not.
  
  Bug #606903 (Hammered)

2011-01-11  Murray Cumming  <murrayc@murrayc-x61>

	Screen: Fix a typo, so the monitors_changed() signal really uses the C signal.
	
	* gdk/src/screen.hg: The monitors_changed() signal was wrapping the 
	size_changed signal.

2010-12-23  Murray Cumming  <murrayc@murrayc.com>

	Use _UNMANAGEABLE on all remaining Windows.

	* gtk/src/pagesetupunixdialog.hg:
	* gtk/src/plug.hg:
	* gtk/src/printunixdialog.hg: Use the _UNMANAGEABLE macro to 
	prevent us from calling manage() in the wrap_new() implementations.
	Bug #623137 (Kjell Ahlstedt)

2010-11-25  Murray Cumming  <murrayc@murrayc.com>

	ComboBoxText, ComboBoxEntryText: Move the undefs to really fix the build.

	* gtk/gtkmm/comboboxentrytext.cc:
	* gtk/gtkmm/comboboxtext.cc: Add undef GTK_DISABLE_DEPRECATED before any 
	other includes.

2010-11-25  Murray Cumming  <murrayc@murrayc.com>

	ComboBoxEntryText: Deprecate in favour of ComboBoxText.

	* gtk/gtkmm/comboboxtext.[h|cc]: Added a constructor with a bool has_entry 
	parameter.
	* gtk/gtkmm/comboboxentrytext.[h|cc]: Deprecate this whole class, telling 
	peopel to use ComboBoxText with has_entry=true, just as we have deprecated 
	ComboBoxEntry for Combobox with has_entry=true.

2010-11-25  Murray Cumming  <murrayc@murrayc.com>

	Fix gtk_methods.defs.

	* gtk/src/gtk_methods.defs: Add back the gtk-unix-print-2.0 stuff that 
	I forget to mention when regenerating this.
