@@ -17,6 +17,7 @@
 ## Software Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 
 files_codegen_m4 =		\
+	class_gtkobject.m4		\
 	convert.m4		\
 	convert_atk.m4		\
 	convert_gdk.m4		\
