@@ -1,3 +1,10 @@
+2010-12-09 Murray Cumming <murrayc@murrayc.com>
+
+  Added class_gtkobject.m4, previously in glibmm.
+  
+  * tools/m4/class_gtkobject.m4: Added this, so we can use _CLASS_GTKOBJECT.
+  * tools/m4/filelist.m4: Mentioned the new file.
+
 2011-01-14  Murray Cumming  <murrayc@murrayc.com>
 
 	Regenerated function defs.
@@ -9473,3 +9480,4 @@ This is the HEAD branch. The stable branch is gtkmm-2-6.
 2003-01-21  Murray Cumming  <murrayc@usa.net>
 
 	* Changed library names: 1.0 -> 1.4 and 2.0 -> 2.4
+
